@@ -1,3 +1,7 @@
+2010-06-28  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #14830: htmlArea RTE: Entering line breaks with Safari not possible
+
 2010-06-27  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #14886: htmlArea RTE: Incorrect function scope when error is raised
